homework_3_restful_crud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-crud-service
spec:
  selector:
    app: nodejs-crud-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: NodePort
