homework_3_restful_crud/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-crud-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nodejs-crud-service
      port:
        number: 80
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/german(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nodejs-crud-service
                port:
                  number: 80
